Task 122137: Use JavaLaunchCommandBuilder to generate command to start REEF Driver; Task 122136: Use Storage SAS URLs to submit REEF application JAR to Batch (#7)
* Created CmdBuilder for Windows and Linux which uses JavaCommandBuilder for making driver JAVA command

* Create AzureStorageUtil which uploads jars to Storage and gives back SAS tokens

* Reverting changes in reef-runtime-hdinsight

* Addressing PR comments